--- a/index.css
+++ b/index.css
@@ -9,6 +9,8 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 650px;
+  padding: 0 20px;
 }
 
 h1 {
